fix style on mobile views

--- a/src/components/tasks/tasks.css
+++ b/src/components/tasks/tasks.css
@@ -23,5 +23,8 @@
     .task__container {
         flex-direction: row;
     }
+    .form__container{
+        width: 300px;
+    }
 
 }
